[gd_scene load_steps=7 format=3 uid="uid://dtgt83vlddo08"]

[ext_resource type="Script" path="res://Scripts/RedAi.gd" id="2_04lgg"]
[ext_resource type="Script" path="res://Scripts/RedChar.gd" id="2_f51pq"]
[ext_resource type="Script" path="res://Scenes/eyes.gd" id="3_5rhiw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ggl8y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uf73f"]
albedo_color = Color(0.917287, 0, 0.240163, 1)

[sub_resource type="BoxMesh" id="BoxMesh_obbp3"]

[node name="Agent" type="Node3D"]

[node name="AIController3D" type="Node3D" parent="."]
script = ExtResource("2_04lgg")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("2_f51pq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("BoxShape3D_ggl8y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D/CollisionShape3D"]
material_override = SubResource("StandardMaterial3D_uf73f")
mesh = SubResource("BoxMesh_obbp3")

[node name="Eyes" type="Node3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.11237, 0)
script = ExtResource("3_5rhiw")

[node name="RayCast3D" type="RayCast3D" parent="CharacterBody3D/Eyes"]
transform = Transform3D(0.992507, -0.122181, 0, 0.122181, 0.992507, 0, 0, 0, 1, 0.510523, 1.00711, -0.0799243)
target_position = Vector3(0, -4.86, 0)

[node name="RayCast3D2" type="RayCast3D" parent="CharacterBody3D/Eyes"]
transform = Transform3D(-4.33839e-08, 5.34072e-09, 1, 0.122181, 0.992507, 0, -0.992507, 0.122181, -4.37114e-08, 0, 1.00711, -0.535296)
target_position = Vector3(0, -4.86, 0)

[node name="RayCast3D3" type="RayCast3D" parent="CharacterBody3D/Eyes"]
transform = Transform3D(-3.73412e-08, 7.28257e-09, -1, 0.122181, 0.992507, 0, 0.992507, -0.122181, -5.96046e-08, 1.06388e-09, 1.02125, 0.530434)
target_position = Vector3(0, -4.86, 0)

[node name="RayCast3D4" type="RayCast3D" parent="CharacterBody3D/Eyes"]
transform = Transform3D(-0.992507, 0.122181, -8.74228e-08, 0.122181, 0.992507, 0, 8.67677e-08, -1.06814e-08, -1, -0.530739, 1.00711, -0.0339142)
target_position = Vector3(0, -4.86, 0)

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10.2403, 0)
